docs-archive/apache-airflow-providers-microsoft-mssql/2.0.1/_sources/_api/airflow/providers/microsoft/mssql/operators/mssql/index.rst.txt
:py:mod:`airflow.providers.microsoft.mssql.operators.mssql`
===========================================================

.. py:module:: airflow.providers.microsoft.mssql.operators.mssql


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.microsoft.mssql.operators.mssql.MsSqlOperator




.. py:class:: MsSqlOperator(*, sql: str, mssql_conn_id: str = 'mssql_default', parameters: Optional[Union[Mapping, Iterable]] = None, autocommit: bool = False, database: Optional[str] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Executes sql code in a specific Microsoft SQL database

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:MsSqlOperator`

   This operator may use one of two hooks, depending on the ``conn_type`` of the connection.

   If conn_type is ``'odbc'``, then :py:class:`~airflow.providers.odbc.hooks.odbc.OdbcHook`
   is used.  Otherwise, :py:class:`~airflow.providers.microsoft.mssql.hooks.mssql.MsSqlHook` is used.

   :param sql: the sql code to be executed
   :type sql: str or string pointing to a template file with .sql
       extension. (templated)
   :param mssql_conn_id: reference to a specific mssql database
   :type mssql_conn_id: str
   :param parameters: (optional) the parameters to render the SQL query with.
   :type parameters: dict or iterable
   :param autocommit: if True, each command is automatically committed.
       (default value: False)
   :type autocommit: bool
   :param database: name of database which overwrite defined one in connection
   :type database: str

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['sql']

      

   .. py:attribute:: template_ext
      :annotation: :Sequence[str] = ['.sql']

      

   .. py:attribute:: ui_color
      :annotation: = #ededed

      

   .. py:method:: get_hook(self) -> Optional[Union[airflow.providers.microsoft.mssql.hooks.mssql.MsSqlHook, airflow.hooks.dbapi.DbApiHook]]

      Will retrieve hook as determined by :meth:`~.Connection.get_hook` if one is defined, and
      :class:`~.MsSqlHook` otherwise.

      For example, if the connection ``conn_type`` is ``'odbc'``, :class:`~.OdbcHook` will be used.


   .. py:method:: execute(self, context: airflow.utils.context.Context) -> None

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



